<package>
  <name>pal_gazebo_plugins</name>
  <version>2.0.1</version>
  <description>
    Robot-independent Gazebo plugins used by PAL Robotics.
  </description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/pal-robotics/pal_gazebo_plugins</url>

  <author>Jose Capriles</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
