<package format="3">
  <name>pal_gazebo_plugins</name>
  <version>4.0.4</version>
  <description>
    Robot-independent Gazebo plugins used by PAL Robotics.
  </description>

  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/pal-robotics/pal_gazebo_plugins</url>

  <author>Jose Capriles</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>control_toolbox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
